# app/Models/User.php
@@ -25,12 +25,11 @@ class User extends Authenticatable
      * @var array<int, string>
      */
     protected $fillable = [
-        'name',
+      'user_name',
         'email',
         'password',
         'role',
         'cin',
-        'prenom',
         'numTel',
         'dateNaissance',
 ];
